# Pathfinding_Algorithm_Visualiser

./: .gitignore  CMakeLists.txt  README.md  simple_sfml  simple_sfml.cpp
include/: AStar.h  Application.h  EventHandler.h  README.md  Renderer.h
scripts/: build.sh  clean.sh  run.sh
src/: main.cpp
src/algorithms/: AStar.cpp  Common.cpp  Common.h  Dijkstra.h
src/app/: Application.cpp
src/gui/: EventHandler.cpp  Renderer.cpp  Window.cpp  Window.h
src/utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
tests/: test_AStar.cpp  test_Dijkstra.cpp  test_Renderer.cpp  test_main.cpp  test_pathfinding.py
